feat: publc status pages
