# docs/swagger.json
@@ -904,12 +904,12 @@
           {
             "name": "id",
             "in": "path",
-            "description": "Status Page ID",
+            "description": "Status Page Id",
             "required": true,
             "schema": {
               "type": "string",
               "format": "string",
-              "description": "Status Page ID"
+              "description": "Status Page Id"
             }
           }
         ]
@@ -939,6 +939,45 @@
             }
           }
         }
+      }
+    },
+    "/api/status-pages/summary/{slug}": {
+      "get": {
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/StatusPageInfo"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "slug",
+            "in": "path",
+            "description": "Status Page Slug",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "string",
+              "description": "Status Page Slug"
+            }
+          }
+        ]
       }
     },
     "/api/status-pages/update/{id}": {
@@ -1741,6 +1780,18 @@
                 }
               }
             }
+          },
+          "message": {
+            "type": "string"
+          }
+        }
+      },
+      "serializers.StatusPageInfo": {
+        "type": "object",
+        "properties": {
+          "statusPage": {
+            "type": "object",
+            "$ref": "#/components/schemas/StatusPage"
           },
           "message": {
             "type": "string"
